# stock-market

./: .gitignore  README.md  database.py  market_constants.py  new_user_portfolio.py  pyproject.toml  pytest.ini  test_app.py
OrderBook/: OrderBook.py  tickers.py
TradingBot/: TradingBot.py  TradingBotTest.py  run_demo_bots.py
app/: api.py  client_info_auth.py  id_codec.py  main.py  persistence.py  price_history.py  schemas.py  shared_constants.py  validation.py  websocket_routes.py
engine/: __init__.py  matching_engine.py  order_book.py  portfolio_value.py
models/: __init__.py  client.py  enums.py  order.py  transaction.py
scripts/: persistence_override.py  smoke_demo.sh
scripts/legacy/: manual_orderbook_demo.py  orderbook_test_checker.py  orderbook_test_generator.py
static/: index.html  script.js
static/config/: shared_constants.json
static/css/: main.css
static/js/: landingPreview.mjs  main.js
tests/: conftest.py
tests/api/: test_api_client.py  test_api_market.py  test_api_orders.py  test_api_prices.py  test_api_status.py  test_api_transactions.py  test_websocket.py
tests/integration/: test_api_market.py  test_api_orders.py  test_api_transactions.py  test_database.py  test_database_bootstrap.py  test_market_maker_api.py  test_market_maker_logic.py  test_persistence.py  test_tradingbot.py  test_tradingbot_api.py  test_tradingbot_logic.py
tests/unit/: test_frontend_config.py  test_matching_engine.py  test_order_service.py  test_validation.py
trading_bot/: __init__.py  market_maker.py  run_demo_bots.py  trading_bot.py
(+9 files in other folders)
