[project]
name = "stock-market"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.11",
    "matplotlib>=3.10.8",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pre-commit>=4.1.0",
    "requests>=2.32.5",
    "sortedcontainers>=2.4.0",
    "uvicorn>=0.34.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
